actions: use github.workspace

--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -19,7 +19,7 @@ jobs:
         run: |
           haxelib install dox --quiet
           haxelib git mxhx-rtti-resolver https://github.com/mxhx-dev/mxhx-rtti-resolver.git --quiet
-          haxelib dev mxhx-runtime-component $GITHUB_WORKSPACE
+          haxelib dev mxhx-runtime-component ${{ github.workspace }}
       - name: Build API reference
         working-directory: docs
         run: haxe docs.hxml
