--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -23,7 +23,7 @@ jobs:
           haxelib install utest --quiet
           haxelib install hxcpp --quiet
           haxelib git mxhx-rtti-resolver https://github.com/mxhx-dev/mxhx-rtti-resolver.git --quiet
-          haxelib dev mxhx-runtime-component $GITHUB_WORKSPACE
+          haxelib dev mxhx-runtime-component ${{ github.workspace }}
       - name: Run Interpreter Tests
         working-directory: test
         run: haxe test.hxml --interp
